Fin du projet les pirates

--- a/src/entites/.gitignore
+++ b/src/entites/.gitignore
@@ -7,3 +7,8 @@
 /Pion.class
 /Plateau.class
 /Affichage.class
+/Pirate.class
+/Depassement.class
+/CaseEffetHP.class
+/CaseEffetPosition.class
+/JournalDeBord.class
